[package]
name = "aberth"
version = "0.0.3"
edition = "2021"
authors = ["ickk <crates@ickk.io>"]
license = "MIT OR Apache-2.0"
description = "Aberth's method for finding the zeros of a polynomial"
documentation = "https://docs.rs/aberth"
repository = "https://github.com/ickk/aberth/"
readme = "README.md"
keywords = ["polynomial", "root-finding"]
categories = ["mathematics"]

[dependencies]
arrayvec = "0.7"
num-complex = "0.4"
num-traits = "0.2"
